<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddShowActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_show_title_tv_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/main_name_et_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496" />

    <Button
        android:id="@+id/main_save_btn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="save"
        android:text="@string/save_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.73"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="76dp"
        android:text="@string/name_tv_text"
        app:layout_constraintBottom_toTopOf="@+id/main_seasons_tv_id"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/main_seasons_tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="80dp"
        android:text="@string/add_show_seasons_tv_text"
        app:layout_constraintBottom_toTopOf="@+id/main_characters_tv_id"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/main_characters_tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="56dp"
        android:text="@string/add_show_characters_tv_text"
        app:layout_constraintBottom_toTopOf="@+id/main_cancel_btn_id"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/main_name_et_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:hint="@string/add_show_name_et_hint"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/main_seasons_et_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <EditText
        android:id="@+id/main_seasons_et_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:ems="10"
        android:hint="@string/add_show_seasons_et_hint"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/main_characters_spnr_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/main_seasons_tv_id" />

    <Spinner
        android:id="@+id/main_characters_spnr_id"
        android:layout_width="224dp"
        android:layout_height="43dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@+id/main_save_btn_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toEndOf="@+id/main_characters_tv_id" />

    <Button
        android:id="@+id/main_cancel_btn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToAddCharacterActivity"
        android:text="@string/cancel_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702" />

</androidx.constraintlayout.widget.ConstraintLayout>